feat(2025-project): initialize APMCM 2025 Problem C analysis project
- Add comprehensive project structure and documentation
- Include detailed README with methodology, quick start guide, and troubleshooting
- Introduce external data templates for soybeans, autos, semiconductors, macroeconomic indicators
- Provide HS code mappings and sector classifications
- Set up tariff and retaliation index data
- Prepare automotive sales and semiconductor output datasets
- Establish reproducible environment with uv package manager support

--- a/.gitignore
+++ b/.gitignore
@@ -10,15 +10,22 @@ wheels/
 .venv
 
 # project specific files
+.trae
 spec
 *.pdf
 prompt
-*.csv
+
 *.log
-*.md
+.iflow
 *.txt
 *.json
 *.xlsx
 project_document
-
+problems/
 2025tmpl
+QUICK_START.md
+PROJECT_COMPLETION_SUMMARY.md
+AGENT_PROMPTS_ANALYSIS.md
+COLLABORATION_GUIDE.md
+2025/USAGE_GUIDE.md
+2025/CODE_SUMMARY.md
