--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ wheels/
 
 # Virtual environments
 .venv
+.env
 
 # project specific files
 .trae
@@ -20,7 +21,7 @@ prompt
 *.txt
 *.json
 *.xlsx
-project_document
+
 problems/
 2025tmpl
 QUICK_START.md
