--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,4 +56,7 @@ dependencies = [
   "jinja2",
   "pywin32>=311",
   "pyarrow>=22.0.0",
+  "requests>=2.32.5",
+  "beautifulsoup4>=4.14.2",
+  "lxml>=6.0.2",
 ]
